# rnd-cli

./: Cargo.toml  Makefile  README.md
.github/workflows/: build.yml
example/: random-names
src/: main.rs
src/base/: app.rs  list.rs  mod.rs  ui.rs
src/utils/: event.rs  files.rs  mod.rs  numbers.rs
